<resources>
    <string name="app_name">sbms</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Name</string>
    <string name="hint_firstname">FirstName</string>
    <string name="hint_lastname">LastName</string>
    <string name="hint_department">Department</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_jobPosition">Job Position</string>
    <string name="hint_officePhone">Office Phone</string>
    <string name="hint_description">Short Company Description</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_address">Address</string>
    <string name="hint_website">Website</string>
    <string name="hint_password">Password</string>
    <string name="err_msg_client_type">Select client type</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_namec">Enter Company Name</string>
    <string name="err_msg_description">Enter Company Description</string>
    <string name="err_msg_email">Enter valid email address</string>

    <string name="err_msg_password">Enter the password</string>
    <!--Supporting Documents-->
    <string name="application_letter">Application Letter</string>
    <string name="company_profile">Company Profile</string>
    <string name="cert_of_incorporation">Certificate Of Incorporation</string>
    <string name="mou">Memorandum Of Association</string>
    <string name="cr14">CR-14</string>
    <string name="vat_cert">Vat Registration Certificate</string>
    <string name="itf_cert">ITF 263 Tax Clearance Certificate</string>
    <string name="trade_license">Trade License</string>
    <string name="trace_ref">Traceable References</string>
    <string name="other">Other(Specify)</string>
    <string name="inventory_brand">Brand</string>
    <string name="inventory_model">Model(Specifications)</string>
    <string name="inventory_quantity">Quantity</string>
    <string name="inventory_need_maintanance">Need Maintainance(Yes/No)</string>
    <!-- End of Supporting Documents-->

    <!--YesNo Array-->
    <string-array name="yes_no">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <!--Inventory Category-->
    <string-array name="inventory_categories">
        <item>--Select--</item>
        <item>Computers-Laptops</item>
        <item>Computers-Desktops</item>
        <item>Computers-Servers</item>
        <item>Printers</item>
        <item>Toners</item>
    </string-array>

</resources>
