<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:background="@color/colorLight"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Supporting Documents Required"
        android:textStyle="bold"
        android:textSize="20dp"
        android:drawableRight="@drawable/ic_person_outline_black_24dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout

        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/app_letter"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/application_letter"
            android:theme="@style/MyCheckBox"/>
        <CheckBox
            android:id="@+id/com_profile"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/company_profile"
            android:theme="@style/MyCheckBox"/>
        <CheckBox
            android:id="@+id/cert_of_inc"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/cert_of_incorporation"
            android:theme="@style/MyCheckBox"/>
        <CheckBox
            android:id="@+id/mou"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/mou"
            android:theme="@style/MyCheckBox"/>
        <CheckBox
            android:id="@+id/cr14"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/cr14"
            android:theme="@style/MyCheckBox"/>
        <CheckBox
            android:id="@+id/vat"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/vat_cert"
            android:theme="@style/MyCheckBox"/>
        <CheckBox
            android:id="@+id/itf"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/itf_cert"
            android:theme="@style/MyCheckBox"/>
        <CheckBox
            android:id="@+id/trade_license"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/trade_license"
            android:theme="@style/MyCheckBox"/>
        <CheckBox
            android:id="@+id/trace_ref"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/trace_ref"
            android:theme="@style/MyCheckBox"/>
        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/input_other"
            android:inputType="text"
            android:singleLine="true"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_descrption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/other"/>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/saveDocuments"

                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonstyleprimary"
                android:text="Save And Go Next"
                android:textColor="@color/colorWhite"
                android:drawableRight="@drawable/ic_exit_to_app_black_24dp"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
</LinearLayout>