<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:background="@color/colorLight"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add Contact"
        android:textStyle="bold"
        android:textSize="20dp"
        android:drawableRight="@drawable/ic_person_outline_black_24dp"/>
    <ScrollView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="450dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_firstname"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_firstname"
                android:inputType="text"
                android:singleLine="true"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_firstname" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_lastname"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_lastname"
                android:inputType="text"
                android:singleLine="true"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_lastname" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_department"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_department"
                android:inputType="text"
                android:singleLine="true"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_supervisor_account_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_department" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_jobposition"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_jobposition"
                android:inputType="text"
                android:singleLine="true"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_jobPosition" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_email"
                android:inputType="text"
                android:singleLine="true"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_email_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:id="@+id/input_layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_phone"
                android:singleLine="true"
                android:inputType="text"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_phone_android_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:id="@+id/input_layout_officephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_officephone"
                android:singleLine="true"
                android:inputType="text"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_officePhone" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_address"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_address"
                android:singleLine="true"
                android:inputType="textLongMessage"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</ScrollView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/saveContactBtn"
        android:layout_marginTop="40dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonstyleprimary"
        android:text="Save Contact"
        android:textColor="@color/colorWhite"
        />
        <Button
            android:id="@+id/finishBtnInContact"
            android:layout_marginTop="40dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyleprimary"
            android:text="Finish"
            android:textColor="@color/colorWhite"
            android:drawableRight="@drawable/ic_exit_to_app_black_24dp"/>
    </LinearLayout>

</LinearLayout>