<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:background="@color/colorLight"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add Client"
        android:textStyle="bold"
        android:textSize="20dp"
        android:drawableRight="@drawable/ic_person_outline_black_24dp"/>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioGroup
            android:id="@+id/client_type_radio_group"
            android:background="@color/colorBlueFade"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RadioButton android:id="@+id/radio_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Company"
             />
        <RadioButton android:id="@+id/radio_individual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Individual"

            android:theme="@style/MyRadioButton"/>
        </RadioGroup>
    </LinearLayout>
   <LinearLayout
       android:gravity="center"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <android.support.design.widget.TextInputLayout
           android:id="@+id/input_layout_name"
           android:layout_marginTop="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <EditText
               android:id="@+id/input_name"
               android:inputType="text"
               android:singleLine="true"
               android:drawablePadding="10dp"
               android:drawableLeft="@drawable/ic_person_outline_black_24dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_name" />
       </android.support.design.widget.TextInputLayout>
       <android.support.design.widget.TextInputLayout
           android:layout_marginTop="10dp"
           android:id="@+id/input_layout_description"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <EditText
               android:id="@+id/input_description"
               android:singleLine="true"
               android:inputType="text"
               android:drawablePadding="10dp"
               android:drawableLeft="@drawable/ic_descrption"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_description" />
       </android.support.design.widget.TextInputLayout>
       <android.support.design.widget.TextInputLayout
           android:layout_marginTop="10dp"
           android:id="@+id/input_layout_email"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <EditText
               android:id="@+id/input_email"
               android:inputType="text"
               android:singleLine="true"
               android:drawablePadding="10dp"
               android:drawableLeft="@drawable/ic_email_"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_email" />
       </android.support.design.widget.TextInputLayout>
       <android.support.design.widget.TextInputLayout
           android:layout_marginTop="10dp"
           android:id="@+id/input_layout_phone"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <EditText
               android:id="@+id/input_phone"
               android:singleLine="true"
               android:inputType="text"
               android:drawablePadding="10dp"
               android:drawableLeft="@drawable/ic_phone"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_phone" />
       </android.support.design.widget.TextInputLayout>
       <android.support.design.widget.TextInputLayout
           android:id="@+id/input_layout_address"
           android:layout_marginTop="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <EditText
               android:id="@+id/input_address"
               android:singleLine="true"
               android:inputType="textLongMessage"
               android:drawablePadding="10dp"
               android:drawableLeft="@drawable/ic_home"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_address" />
       </android.support.design.widget.TextInputLayout>
       <android.support.design.widget.TextInputLayout
           android:layout_marginTop="10dp"
           android:id="@+id/input_layout_website"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <EditText
               android:id="@+id/input_website"
               android:singleLine="true"
               android:inputType="textUri"
               android:drawablePadding="10dp"
               android:drawableLeft="@drawable/ic_link_black_24dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_website" />
       </android.support.design.widget.TextInputLayout>

       <TextView

           android:layout_marginTop="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="Branches(Yes/No)"

           android:textSize="18dp"
           />
       <Spinner
           android:id="@+id/branch_spinner"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:entries="@array/yes_no"
           />

       <Button
           android:id="@+id/saveClientBtn"
           android:layout_marginTop="40dp"
           android:layout_width="300dp"
           android:layout_height="wrap_content"
           android:background="@drawable/buttonstyleprimary"
           android:text="Save And Go Next"
           android:textColor="@color/colorWhite"
           android:drawableRight="@drawable/ic_exit_to_app_black_24dp"
           />
   </LinearLayout>






</LinearLayout>
    </ScrollView>