<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:background="@color/colorLight"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Client Inventory"
        android:textStyle="bold"
        android:textSize="20sp"
        android:drawableRight="@drawable/ic_person_outline_black_24dp"/>
    <TextView
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Current Inventory"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="15sp" />
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="100dp">

    </android.support.v7.widget.RecyclerView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Inventory"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="15sp" />
        <TextView
            android:layout_marginTop="10dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select Category"
            android:textColor="@color/colorLight"
            android:textStyle="bold"
            android:textSize="15sp" />
        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/inventory_categories"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:id="@+id/input_layout_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_brand"
                android:singleLine="true"
                android:inputType="textUri"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inventory_brand" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:id="@+id/input_layout_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_model"
                android:singleLine="true"
                android:inputType="textUri"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_power_input_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inventory_model" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:id="@+id/input_layout_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_quantity"
                android:singleLine="true"
                android:inputType="textUri"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_power_input_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inventory_quantity" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_marginTop="10dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inventory_need_maintanance"
            android:textColor="@color/colorLight"
            android:textStyle="bold"
            android:textSize="15sp" />
        <Spinner
            android:id="@+id/inventory_spinner_need_mantain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/yes_no"
            />
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/saveInventory"
                android:layout_marginTop="40dp"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonstyleprimary"
                android:text="Save"
                android:textColor="@color/colorWhite"
                />
            <Button
                android:id="@+id/goNext_btn_in_iventory"
                android:layout_marginTop="40dp"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonstyleprimary"
                android:text="Next"
                android:textColor="@color/colorWhite"
                android:drawableRight="@drawable/ic_exit_to_app_black_24dp"/>
        </LinearLayout>


    </LinearLayout>
    </ScrollView>


</LinearLayout>